updated SI methods for Tleaves

--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -65,9 +65,9 @@ see [Issue 2](https://github.com/EcoClimLab/vertical-thermal-review/issues/2) , 
 
 METHODS ON TEALEAVES GO HERE.
 
-Energy balance for a normal overstory sun leaf and understory shade leaf were parameterized with biophysical variables from Harvard NEON data documented here: (https://github.com/EcoClimLab/vertical-thermal-review/blob/master/NEON_height_profiles/HARV_neon_stats.csv). Leaf trait measurements for effective leaf width was measured on ~Quercus rubra~ sun and shade leaf, stomatal conductance measurements were refered from Tleaves typical sun and shade measurements [@muir_tealeaves_2019] and as well @cavender-baresChangesDroughtResponse2000. 
+Energy balance for a normal overstory sun leaf and understory shade leaf were parameterized with biophysical variables from Harvard NEON data documented here: (https://github.com/EcoClimLab/vertical-thermal-review/blob/master/NEON_height_profiles/HARV_neon_stats.csv). Leaf trait measurements for leaf width, ie. measured as leaf characteristic dimmension, was measured on ~Quercus rubra~ sun and shade leaf, stomatal conductance measurements were referred from Tleaves typical sun and shade measurements [@muir_tealeaves_2019] and as well @cavender-baresChangesDroughtResponse2000. 
 
-For drought scenario, biophysical variables were parameterized similar to normal scenario using Harvard NEON data. Overstory drought PAR values reflect maximum observed Harvard NEON PAR and understory drought reflect 50% increased PAR of understory normal value. Leaf trait measurements for effective leaf width is the same as normal scenario, stomatal conductance was referred from @cavender-baresChangesDroughtResponse2000. In each visual, all variables are constant (Biophysical Constants table) except for the independent variable that represents minimum - maximum range.
+For drought scenario, biophysical variables were parameterized similar to normal scenario using Harvard NEON data. Overstory drought PAR values reflect maximum observed Harvard NEON PAR and understory drought reflect 50% increased PAR of understory normal value. Leaf trait measurements for leaf width is the same as normal scenario, stomatal conductance is kept constant at a minimum value of 0.01 umol/m^2/s/Pa for both positions. In each visual, all variables are constant (Biophysical Constants table) except for the independent variable that represents minimum - maximum range.
 
 \newpage
 
